--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,5 @@ type = "javascript"
 account_id = "a30658e358e5a6c636618155808842dc"
 workers_dev = true
 kv_namespaces = [
-  { binding = "worker_MY_KV_preview", id = "fb8ce3f781e9458b8889fdcbc5fc34b3" }
+  { binding = "MY_KV", id = "fb281f46e2bf48d4812cdf71001bd394" }
 ]
